segundo ejercicio triggers y test

--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -15,13 +15,30 @@ public with sharing class CaseTriggerHandler {
                 AND WhoId IN :casesByContactId.keySet()
             ];
 
-            System.debug(tasks.size());
-
             for (Task aTask : tasks) {
                 Case aCase = casesByContactId.get(aTask.WhoId);
                 aTask.WhatId = aCase.Id;
             }
 
             update tasks;
+    }
+
+    public static void updateRelatedCases(List<case> cases){
+        
+        Map<Id, String> casesByResult = new Map<Id, String>();
+        for (Case aCase : cases) {
+            casesByResult.put(aCase.Id, aCase.Result__c);
+        }
+
+        List<Case> relatedCases = [ 
+            SELECT Id, Result__c, ParentId FROM Case WHERE ParentId IN :casesByResult.keySet()
+        ];
+
+        for(Case aCase: relatedCases){
+            aCase.Result__c = casesByResult.get(aCase.ParentId);
+        }
+
+        update relatedCases;
+
     }
 }
