fixing error message in pokeapi

--- a/force-app/main/default/classes/PokemonCalloutTest.cls
+++ b/force-app/main/default/classes/PokemonCalloutTest.cls
@@ -29,6 +29,6 @@ private class PokemonCalloutTest {
                 System.debug('Name: '+ tempMap.get('name'));
                 aPokeName = String.valueOf(tempMap.get('name'));
             }
-        System.assertEquals('pikachu', aPokeName);          
+        System.assertEquals('pikachu', aPokeName, 'Pokemon name does not match');          
     }   
 }
