--- a/force-app/main/default/classes/CaseTriggerTest.cls
+++ b/force-app/main/default/classes/CaseTriggerTest.cls
@@ -38,9 +38,11 @@ public with sharing class CaseTriggerTest {
         update aCaseChild;
         Test.stopTest();
 
-        Case updatedParentCase = [SELECT Id, Result__c
-                                FROM Case
-                                WHERE Id = :aCaseParent.Id];
+        Case updatedParentCase = [
+            SELECT Id, Result__c
+            FROM Case
+            WHERE Id = :aCaseParent.Id
+            ];
 
         System.assertEquals(null, updatedParentCase.Result__c, 'The associated case Result field do not match');
     }
