--- a/force-app/main/default/classes/CaseTriggerTest.cls
+++ b/force-app/main/default/classes/CaseTriggerTest.cls
@@ -3,10 +3,14 @@ public class CaseTriggerTest {
 
     @TestSetup
     static void makeData(){
-        Contact aContact = new Contact(FirstName='Test', LastName='Subject', Email='tsubject@mail.com');
+        Contact aContact = new Contact(FirstName='Test', 
+                                    LastName='Subject',
+                                    Email='tsubject@mail.com');
         insert aContact;
 
-        Task aTask = new Task(WhoId=aContact.Id, Subject='Call', Status='Not Started');
+        Task aTask = new Task(WhoId=aContact.Id, 
+                            Subject='Call', 
+                            Status='Not Started');
         insert aTask;
 
         Case firstCase = new Case(ContactId=aContact.Id, ParentId=null, Result__c='Default');
@@ -18,8 +22,17 @@ public class CaseTriggerTest {
 
     @isTest static void shouldAssignCaseToUnrelatedTaskThatsUnderTwoMinutes(){
         
-        Contact aContact = [SELECT Id, Name FROM Contact WHERE Email='tsubject@mail.com'];
-        Task aTask = [SELECT Id FROM Task WHERE WhoId=:aContact.Id];
+        Contact aContact = [
+            SELECT Id, Name 
+            FROM Contact 
+            WHERE Email='tsubject@mail.com'
+            ];
+            
+        Task aTask = [
+            SELECT Id 
+            FROM Task 
+            WHERE WhoId=:aContact.Id
+            ];
 
         Datetime aDate = Datetime.now().addMinutes(-1);
         Test.setCreatedDate(aTask.Id, aDate);
@@ -30,14 +43,27 @@ public class CaseTriggerTest {
         insert aCase;
         Test.stopTest();
 
-        Task taskToCheckRelation = [SELECT WhatId FROM Task WHERE WhoId=:aContact.Id];
+        Task taskToCheckRelation = [
+            SELECT WhatId 
+            FROM Task 
+            WHERE WhoId=:aContact.Id
+            ];
 
         System.assertEquals(aCase.Id, taskToCheckRelation.WhatId, 'Something went wrong');
     }
 
     @isTest static void shouldNotAssignCaseToTaskSinceItsBeenOverFourMinutes(){
-        Contact aContact = [SELECT Id, Name FROM Contact WHERE Email='tsubject@mail.com'];
-        Task aTask = [SELECT Id FROM Task WHERE WhoId=:aContact.Id];
+        Contact aContact = [
+            SELECT Id, Name 
+            FROM Contact 
+            WHERE Email='tsubject@mail.com'
+            ];
+
+        Task aTask = [
+            SELECT Id 
+            FROM Task 
+            WHERE WhoId=:aContact.Id
+            ];
 
         Datetime aDate = Datetime.now().addMinutes(-5);
         Test.setCreatedDate(aTask.Id, aDate);
@@ -48,15 +74,35 @@ public class CaseTriggerTest {
         insert aCase;
         Test.stopTest();
 
-        Task taskToCheckRelation = [SELECT WhatId FROM Task WHERE WhoId=:aContact.Id];
+        Task taskToCheckRelation = [
+            SELECT WhatId 
+            FROM Task 
+            WHERE WhoId=:aContact.Id
+            ];
 
         System.assertNotEquals(aCase.Id, taskToCheckRelation.WhatId, 'Something went wrong');
     }
 
     @isTest static void shouldUpdateResultFieldFromAssociatedCase(){
-        Contact aContact = [SELECT Id FROM Contact WHERE Email='tsubject@mail.com'];
-        Case firstCase = [SELECT Id FROM Case WHERE ContactId=:aContact.Id AND ParentId=null];
-        Case secondCase = [SELECT Id, Result__c FROM Case WHERE ContactId=:aContact.Id AND ParentId=:firstCase.Id];
+        Contact aContact = [
+            SELECT Id 
+            FROM Contact 
+            WHERE Email='tsubject@mail.com'
+            ];
+
+        Case firstCase = [
+            SELECT Id 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=null
+            ];
+
+        Case secondCase = [
+            SELECT Id, Result__c 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=:firstCase.Id
+            ];
 
         secondCase.Result__c = 'A Result';
 
@@ -64,15 +110,36 @@ public class CaseTriggerTest {
         update secondCase;
         Test.stopTest();
 
-        Case caseToCheckRelation = [SELECT Id, Result__c FROM Case WHERE ContactId=:aContact.Id AND ParentId=null];
+        Case caseToCheckRelation = [
+            SELECT Id, Result__c 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=null
+            ];
 
         System.assertEquals(secondCase.Result__c, caseToCheckRelation.Result__c, 'Something went wrong');
     }
 
     @isTest static void shouldUpdateResultFieldFromAssociatedCaseIfLeftBlank(){
-        Contact aContact = [SELECT Id FROM Contact WHERE Email='tsubject@mail.com'];
-        Case firstCase = [SELECT Id FROM Case WHERE ContactId=:aContact.Id AND ParentId=null];
-        Case secondCase = [SELECT Id, Result__c FROM Case WHERE ContactId=:aContact.Id AND ParentId=:firstCase.Id];
+        Contact aContact = [
+            SELECT Id 
+            FROM Contact 
+            WHERE Email='tsubject@mail.com'
+            ];
+
+        Case firstCase = [
+            SELECT Id 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=null
+            ];
+
+        Case secondCase = [
+            SELECT Id, Result__c 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=:firstCase.Id
+            ];
 
         secondCase.Result__c = '';
 
@@ -80,7 +147,12 @@ public class CaseTriggerTest {
         update secondCase;
         Test.stopTest();
 
-        Case caseToCheckRelation = [SELECT Id, Result__c FROM Case WHERE ContactId=:aContact.Id AND ParentId=null];
+        Case caseToCheckRelation = [
+            SELECT Id, Result__c 
+            FROM Case 
+            WHERE ContactId=:aContact.Id 
+            AND ParentId=null
+            ];
 
         System.assertEquals(null, caseToCheckRelation.Result__c, 'Something went wrong');
     }
