--- a/force-app/main/default/classes/AccountMessageController.cls
+++ b/force-app/main/default/classes/AccountMessageController.cls
@@ -39,5 +39,14 @@ public class AccountMessageController {
         }
         insert accountMessages;
     }
+
+    public class WrapperAccount {
+        public Boolean selected {get; set;}
+        public Account account {get; set;}
+        public WrapperAccount(Account account) {
+            this.account = account;
+            this.selected = false;
+        }
+    }
     
 }
