--- a/force-app/main/default/classes/AccountApiServiceTest.cls
+++ b/force-app/main/default/classes/AccountApiServiceTest.cls
@@ -49,5 +49,18 @@ public with sharing class AccountApiServiceTest {
 
         System.assertEquals('Main Contact', response.Contacts[0].Name, 'Not main contact');
         System.assertEquals('Latest Opportunity', response.Opportunities[0].Name, 'Not latest opportunity');
-    }    
+    }
+    
+    @isTest static void shouldBringNullAccountSinceIdIsNotFound(){
+        String requestId = 'abcd123456';
+        RestRequest request = new RestRequest();
+        request.requestURI = 'https://mindful-goat-vwsyqb-dev-ed.my.salesforce.com/services/apexrest/SpecialQuery/Account/' +
+                            requestId;
+        request.httpMethod = 'GET';
+        RestContext.request = request;
+        
+        Account response = AccountApiService.getAccountById();
+
+        System.assertEquals(null, response, 'Found something other than null');
+    }
 }
