Faltantes: AccountManage, AccountService, AccountTrigger, AccountValidation, CaseTrigger(corregido)

--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -19,4 +19,28 @@ public with sharing class CaseTriggerHandler {
         }
         update updatedCases;
     }
+    public static void realatedTask(List<Case> cases) {
+        Map<Id, Case> casesByContactId = new Map<Id, Case>();
+
+            for (Case aCase : cases) {
+                casesByContactId.put(aCase.ContactId, aCase);
+            }
+
+            Datetime aDate = Datetime.now().addMinutes(-2);
+
+            List<Task> tasks = [
+                SELECT Id, WhoId
+                FROM Task
+                WHERE WhatId = null
+                AND WhoId IN :casesByContactId.keySet()
+                AND CreatedDate >= :aDate
+            ];
+
+            for (Task aTask : tasks) {
+                Case aCase = casesByContactId.get(aTask.WhoId);
+                aTask.WhatId = aCase.Id;
+            }
+
+            update tasks;
+    }
 }
