--- a/force-app/main/default/classes/AccountManage.cls
+++ b/force-app/main/default/classes/AccountManage.cls
@@ -82,4 +82,48 @@ public class AccountManage {
             return anAccount;
         }
     }   
+
+
+    public static void createOpportunity(List<Account> ListAccount){
+
+        List<Opportunity> ListOpportunities=new List<Opportunity>();
+
+        for(Account anAccount : ListAccount){
+            if(anAccount.create_opportunity__c==true){
+                Opportunity anOpportunity=new Opportunity();
+                anOpportunity.Name='Opportunity ' + anAccount.Name +' '+Date.TODAY();
+                anOpportunity.StageName='Prospection';
+                anOpportunity.CloseDate=Date.TODAY()+30;
+                ListOpportunities.add(anOpportunity);
+            }
+        }
+
+        insert ListOpportunities;
+   }
+
+
+   public static string validateAccount(List<Account> ListAccount ) {
+    try{
+        List<Account> InsertList=new List<Account>();
+        Integer error=0;
+
+        for(Account anAccount : ListAccount){
+            Integer count=[select Count() from Account where Identification_type__c=:anAccount.Identification_type__c and Document_number__c=:anAccount.Document_number__c];
+            
+            if(count != 0){
+                error=1;
+                anAccount.addError('El registro '+anAccount.Name+' ya existe');
+            }                                  
+        }
+        if(error==0)
+            return 'Insertado Correctamente';
+        
+        else
+            return 'El registro ya existe';
+    }
+    catch(DmlException e){
+        return string.valueOf(e);  
+    }
+
+}
 }
