--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -23,4 +23,24 @@ public with sharing class CaseTriggerHandler {
 
             update tasks;
     }
+
+    public static void UpdatePrincipalCase(List<Case> ListCases){
+
+        List<Case> ListCasesUpdate=new List<Case>();
+
+        for (Case aCase : ListCases) {
+            if (aCase.ParentId!=null) {
+
+                Case PrincipalCase=[
+                    SELECT Id, Result__c 
+                    FROM Case 
+                    WHERE Id=:aCase.ParentId];
+
+                PrincipalCase.Result__c=aCase.Result__c;
+                ListCasesUpdate.add(PrincipalCase);    
+            }
+        }
+
+        update ListCasesUpdate;
+    }   
 }
